Using a different discriminator enum for output schemas

--- a/specification/cognitiveservices/data-plane/Language/preview/2022-02-01-preview/examples/SuccessfulAnalyzeTextJobStatusRequest.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2022-02-01-preview/examples/SuccessfulAnalyzeTextJobStatusRequest.json
@@ -22,7 +22,7 @@
           "total": 2,
           "items": [
             {
-              "kind": "EntityRecognition",
+              "kind": "EntityRecognitionResults",
               "taskId": "Recognize Entities",
               "lastUpdateDateTime": "2020-10-01T15:01:03Z",
               "status": "succeeded",
@@ -85,7 +85,7 @@
               }
             },
             {
-              "kind": "CustomEntityRecognition",
+              "kind": "CustomEntityRecognitionResults",
               "taskId": "Recognize US Regions",
               "lastUpdateDateTime": "2020-10-01T15:01:03Z",
               "status": "succeeded",
