--- a/specification/cognitiveservices/data-plane/Language/preview/2022-02-01-preview/examples/SuccessfulEntityRecognitionRequest.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2022-02-01-preview/examples/SuccessfulEntityRecognitionRequest.json
@@ -28,7 +28,7 @@
       "200": {
         "headers": {},
         "body": {
-          "kind": "EntityRecognition",
+          "kind": "EntityRecognitionResults",
           "results": {
             "documents": [
                 {
