--- a/specification/cognitiveservices/data-plane/Language/preview/2022-02-01-preview/examples/SuccessfulLanguageDetectionRequest.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2022-02-01-preview/examples/SuccessfulLanguageDetectionRequest.json
@@ -30,7 +30,7 @@
       "200": {
         "headers": {},
         "body": {
-          "kind": "LanguageDetection",
+          "kind": "LanguageDetectionResults",
           "results": {
             "documents": [
                 {
