--- a/specification/cognitiveservices/data-plane/Language/preview/2022-02-01-preview/examples/SuccessfulPiiEntityRecognitionRequest.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2022-02-01-preview/examples/SuccessfulPiiEntityRecognitionRequest.json
@@ -33,7 +33,7 @@
       "200": {
         "headers": {},
         "body": {
-          "kind": "PiiEntityRecognition",
+          "kind": "PiiEntityRecognitionResults",
           "results": {
             "documents": [
                 {
