--- a/specification/cognitiveservices/data-plane/Language/preview/2022-02-01-preview/textanalytics.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2022-02-01-preview/textanalytics.json
@@ -287,7 +287,7 @@
     "LanguageDetectionAnalysisInput": {
       "properties": {
         "documents": {
-          "type": "object",
+          "type": "array",
           "items": {
             "$ref": "#/definitions/LanguageInput"
           }
