--- a/specification/cognitiveservices/data-plane/Language/preview/2022-02-01-preview/textanalytics.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2022-02-01-preview/textanalytics.json
@@ -146,7 +146,7 @@
         "produces": [
           "application/json"
         ],
-        "description": "Get the status of an analysis job.  A job may consist of one or more tasks.  Once all tasks are completed, the job will transition to the completed state and results will be available for each task.",
+        "description": "Get the status of an analysis job.  A job may consist of one or more tasks.  Once all tasks are succeeded, the job will transition to the suceeded state and results will be available for each task.",
         "operationId": "AnalyzeText_JobStatus",
         "summary": "Get analysis status and results",
         "parameters": [
@@ -2367,6 +2367,7 @@
             "notStarted",
             "running",
             "succeeded",
+            "partiallySucceeded",
             "failed",
             "cancelled",
             "cancelling"
