Added some examples for delete and cancel; updated samples for new preview

--- a/specification/cognitiveservices/data-plane/Language/preview/2022-03-01-preview/examples/SuccessfulAnalyzeTextJobsMultipleTaskSubmitRequest.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2022-03-01-preview/examples/SuccessfulAnalyzeTextJobsMultipleTaskSubmitRequest.json
@@ -1,7 +1,7 @@
 {
   "parameters": {
     "Ocp-Apim-Subscription-Key": "{API key}",
-    "api-version": "2022-02-01-preview",
+    "api-version": "2022-03-01-preview",
     "Endpoint": "{Endpoint}",
     "jobId": "{Job ID}",
     "input": {
@@ -42,7 +42,8 @@
   "responses": {
     "202": {
       "headers": {
-        "Operation-Location": "{endpoint}/language/analyze-text/jobs/{jobId}"
+        "Operation-Location": "{Endpoint}/language/analyze-text/jobs/{jobId}?api-version=2022-03-01-preview",
+        "Location": "{Endpoint}/language/analyze-text/jobs/{jobId}/data?api-version=2022-03-01-preview"
       }
     }
   }
