--- a/specification/cognitiveservices/data-plane/Language/preview/2022-03-01-preview/textanalytics.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2022-03-01-preview/textanalytics.json
@@ -123,6 +123,9 @@
             "headers": {
               "Operation-Location": {
                 "type": "string"
+              },
+              "Location": {
+                "type": "string"
               }
             }
           },
@@ -229,7 +232,7 @@
         },
         "x-ms-examples": {
           "Successful Job Delete Request": {
-            "$ref": ".//examples//SuccessfulJobCancelRequest.json"
+            "$ref": ".//examples//SuccessfulAnalyzeTextJobsCancelRequest.json"
           }
         },
         "x-ms-long-running-operation": true
@@ -266,7 +269,7 @@
         },
         "x-ms-examples": {
           "Successful Job Delete Request": {
-            "$ref": ".//examples//SuccessfulJobDeleteRequest.json"
+            "$ref": ".//examples//SuccessfulAnalyzeTextJobsDeleteRequest.json"
           }
         },
         "x-ms-long-running-operation": true
